app/src/style.css
/* Romove the watermark */
.mapboxgl-ctrl-logo,
.mapboxgl-ctrl-bottom-right {
	display: none !important;
}

@font-face {
	font-family: 'Be Vietnam Pro';
	src: url('/src/assets/fonts/BeVietnamPro-Light.ttf') format('truetype');
	font-weight: 300;
}

@font-face {
	font-family: 'Be Vietnam Pro';
	src: url('/src/assets/fonts/BeVietnamPro-Regular.ttf') format('truetype');
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: 'Be Vietnam Pro';
	src: url('/src/assets/fonts/BeVietnamPro-Medium.ttf') format('truetype');
	font-weight: 500;
}

@font-face {
	font-family: 'Be Vietnam Pro';
	src: url('/src/assets/fonts/BeVietnamPro-Bold.ttf') format('truetype');
	font-weight: 700;
}

:root {
	font-weight: 400;
	color-scheme: light dark;
	background-color: #242424;
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;

	/* Color System */
	--dark-primary-text: 255, 255, 255, 0.95;
	--dark-secondary-text: 255, 255, 255, 0.7;

	--system-dark-midnight-blue: #07080a;
	--system-dark-2nd-white: #f2f2f5;

	--color-gray: #878280;
	--color-light-gray: #D1D7EB;
	--color-green: #24ad6e;
	--color-red: #f46060;
	--color-base: 255, 255, 255, 0.7;
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-family: 'Be Vietnam Pro', system-ui, Avenir, Helvetica, Arial, sans-serif;
}

body {
	display: flex;
	place-items: center;
	min-width: 320px;
	min-height: 100vh;

	/* Hide scroll */
	overflow-x: hidden;
	overflow-y: hidden;

	width: 100vw;
	height: 100vh;
}

div {
	display: flex;
}

button:hover {
	border-color: #646cff;
}

button:focus,
button:focus-visible {
	outline: 4px auto -webkit-focus-ring-color;
}

/* Font */
h1 {
	color: var(--3-text-dark-1st-white, rgba(255, 255, 255, 0.95));
	font-size: 27px;
	font-weight: 500;
	line-height: 36px;
}

h2 {
	color: var(--3-text-dark-1st-white, rgba(255, 255, 255, 0.95));
	font-size: 21px;
	font-weight: 500;
	line-height: 32px;
}

h3 {
	font-size: 19px;
	font-weight: 500;
	line-height: 24px;
}

p {
	font-size: 15px;
	font-weight: 300;
	line-height: 24px;
}

.button-text {
	font-size: 15px;
	font-weight: 700;
	line-height: 24px;
}

.headline {
	font-size: 16px;
	font-weight: 500;
	line-height: 21px;
}

.subhead {
	font-size: 14px;
	font-weight: 500;
	line-height: 19px;
}

.footnote {
	font-size: 12px;
	font-weight: 400;
	line-height: 16px;
}

.caption1 {
	font-size: 10px;
	font-weight: 400;
	line-height: 14px;
}

.caption2 {
	font-size: 9px;
	font-weight: 400;
	line-height: 12px;
}

/* Global Symbols */
.splitline {
	width: 100%;
	height: 1px;
	background: var(--4-base-dark-base, rgba(255, 255, 255, 0.07));
}

